--- a/examples/docs/i18n.md
+++ b/examples/docs/i18n.md
@@ -1,12 +1,21 @@
 ## 国际化
 
-组件内部默认使用中文，如果需要使用其他语言，需要进行多语言设置。以英文为例，在项目入口js中添加如下代码：
+组件内部默认使用中文，如果需要使用其他语言，需要进行多语言设置。
+
+以英文为例，在项目顶层组件外包裹LocaleProvider组件即可：
 
 ```javascript
-import { i18n } from 'dragon-ui'
+import React from 'react';
+import ReactDOM from 'react-dom';
+import { LocaleProvider } from 'dragon-ui'
 import en from 'dragon-ui/lib/locale/lang/en'
+import App from './App'; 
 
-i18n.use(en);
+ReactDOM.render((
+  <LocaleProvider locale={en}>
+    <App />
+  </LocaleProvider>
+), document.getElementById('app'));
 ```
 
 点击顶部右侧导航菜单的"中文"或"English"按钮，可以预览组件在中英文不同语言下的效果。
