chore: refactor locale component depending on zarm locale

--- a/components/locale/i18n.md
+++ b/components/locale/i18n.md
@@ -1,23 +1,88 @@
-## 国际化
+# 国际化
 
-组件内部默认使用中文，如果需要使用其他语言，需要进行多语言设置。
+LocaleProvider组件提供了国际化功能，可以通过locale属性设置语言包。
 
-以英文为例，在项目顶层组件外包裹LocaleProvider组件即可：
+## 基本用法
 
-```javascript
-import React from 'react';
-import ReactDOM from 'react-dom';
-import { LocaleProvider } from 'zarm-web'
-import en from 'zarm-web/lib/locale/lang/en'
-import App from './App'; 
+```jsx
+import { Alert, Button, LocaleProvider } from 'zarm-web';
 
-ReactDOM.render((
-  <LocaleProvider locale={en}>
-    <App />
-  </LocaleProvider>
-), document.getElementById('app'));
+const localeCN = {
+  locale: 'zh-cn',
+  Alert: {
+    close: '关闭',
+  },
+}
+const localeEN = {
+  locale: 'en',
+  Alert: {
+    close: 'Close'
+  }
+}
+
+class Demo extends React.Component {
+  constructor(props) {
+    super(props);
+    this.state = {
+      locale: localeCN,
+      alertVisible: false,
+    };
+    this.showAlert = this.showAlert.bind(this);
+    this.hideAlert = this.hideAlert.bind(this);
+    this.toggleLanguage = this.toggleLanguage.bind(this);
+  }
+
+  showAlert() {
+    this.setState({
+      alertVisible: true,
+    });
+  }
+
+  hideAlert() {
+    this.setState({
+      alertVisible: false,
+    });
+  }
+
+  toggleLanguage() {
+    const { locale } = this.state
+
+    if (locale === localeEN) {
+      this.setState({
+        locale: localeCN
+      });
+    } else {
+      this.setState({
+        locale: localeEN
+      });
+    }
+    this.showAlert();
+  }
+
+  render() {
+    const { alertVisible, locale } = this.state;
+    console.log(locale);
+
+    return (
+      <LocaleProvider locale={locale}>
+        <div>
+          <Button theme="primary" onClick={this.toggleLanguage}>切换语言</Button>
+          <Alert
+            visible={alertVisible}
+            onClose={this.hideAlert}
+            message='注意关闭按钮'
+          />
+        </div>
+      </LocaleProvider>
+    );
+  }
+}
+
+ReactDOM.render(<Demo />, mountNode);
 ```
 
-点击顶部右侧导航菜单的"中文"或"English"按钮，可以预览组件在中英文不同语言下的效果。
+## API
 
-目前支持中文和英文，欢迎提交PR贡献更多的语言。
+| 属性 | 类型 | 默认值 | 说明 |
+| :--- | :--- | :--- | :--- |
+| locale | { locale: string, [componentName: string]: { [localeKey: string]: string } } | - | 设置语言包 |
